Fix spacing and errors

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ header, footer {
 }
 
 nav ul {
-  font-family:sans-serif;
+  font-family: sans-serif;
 }
 
 .logo {
@@ -23,7 +23,7 @@ nav ul {
 }
 
 h2 {
-  color: #93a1a1
+  color: #93a1a1;
 }
 
 .wrapper > .dfn {
